# pyDots

./: .gitignore  README.md  SPEC.md  pyproject.toml
pydots/: __init__.py
pydots/core/: __init__.py  codegen.py  executor.py  graph.py  parser.py
pydots/ui/: __init__.py
src/: __init__.py  main.py
src/core/: executor.py  graph.py  parser.py
src/editor/: __init__.py  main_window.py
