[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDots"
version = "0.1.0"
description = "Visual Python Scripting Language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "yetarnishedmpj"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PyQt6>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pydots = "pydots.main:run_editor"

[project.urls]
"Homepage" = "https://github.com/yetarnishedmpj/pyDots"
"Bug Tracker" = "https://github.com/yetarnishedmpj/pyDots/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydots*"]
